# notes

./: AGENTS.md  Cargo.toml  README.md  notes.md
scripts/: add-to-path.sh  install_completions_bash.sh  install_completions_zsh.sh
src/: app.rs  bullet.rs  cli.rs  completions.rs  daemon.rs  main.rs  paths.rs  ui.rs  utils.rs
tests/: cli.rs
